force-app/main/default/objects/Project_Billing_Line__c/Project_Billing_Line__c.object-meta.xml
<CustomObject>
    <label>Project Billing Line</label>
    <pluralLabel>Project Billing Lines</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Line Name</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>