force-app/main/default/objects/Project_Billing_Line__c/fields/Line_Match_Key__c.field-meta.xml
<CustomField>
  <fullName>Line_Match_Key__c</fullName>
  <label>Line Match Key</label>
  <type>Text</type>
  <length>255</length>
  <unique>true</unique>
  <externalId>true</externalId>
</CustomField>