force-app/main/default/objects/Project_Billing_Line__c/fields/Phase_Number__c.field-meta.xml
<CustomField>
    <fullName>Phase_Number__c</fullName>
    <label>Phase Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Project Phase which this Line should be added to (1, 2, 3...)</description>
</CustomField>