force-app/main/default/objects/Project_Billing_Line__c/fields/Product__c.field-meta.xml
<CustomField>
  <fullName>Product__c</fullName>
  <label>Product</label>
  <type>Lookup</type>
  <referenceTo>Product2</referenceTo>
  <relationshipName>Product_Project_Billing_Lines</relationshipName>
  <relationshipLabel>Project Billing Lines</relationshipLabel>
</CustomField>