force-app/main/default/objects/Project_Billing_Line__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Billing Lines</relationshipLabel>
    <relationshipName>Project_Project_Billing_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>