force-app/main/default/objects/Project_Billing_Line__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
  <fullName>Project_Phase__c</fullName>
  <label>Project Phase</label>
  <type>Lookup</type>
  <referenceTo>Project_Phase__c</referenceTo>
  <relationshipName>Project_Phase_Project_Billing_Lines</relationshipName>
  <relationshipLabel>Project Billing Lines</relationshipLabel>
</CustomField>