force-app/main/default/objects/Project_Billing_Line__c/fields/Source_Proposal_Line__c.field-meta.xml
<CustomField>
    <fullName>Source_Proposal_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Proposal Line</label>
    <referenceTo>Proposal_Line__c</referenceTo>
    <relationshipLabel>Project Billing Lines</relationshipLabel>
    <relationshipName>Source_Proposal_Line_Project_Billing_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>